change some colors

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -8,12 +8,13 @@
     --purple: #ad26b4;
     --yellow: #fecd35;
     --red: #f05230;
-    --darkgrey: #4858EA;
+    --darkgrey: #15171A;
     --midgrey: #738a94;
     --lightgrey: #c5d2d9;
     --whitegrey: #e5eff5;
     --pink: #fa3a57;
     --brown: #a3821a;
+    --blueskedu: #4858EA;
     --darkmode: color(var(--darkgrey) l(+2%));
 }
 
