--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -283,7 +283,7 @@ body {
     right: 0;
     left: 0;
     z-index: 1000;
-    background: color(var(--darkgrey) l(-5%));
+    background: color(var(--blueskedu) l(-5%));
 }
 
 .site-nav {
@@ -316,7 +316,7 @@ body {
 .site-header-background:not(.responsive-header-img) .site-nav-left-wrapper:after,
 .site-nav-main .site-nav-left-wrapper:after {
     right: 0;
-    background: linear-gradient(to right, color(var(--darkgrey) l(-5%) a(0)) 0%,color(var(--darkgrey) l(-5%)) 100%);
+    background: linear-gradient(to right, color(var(--blueskedu) l(-5%) a(0)) 0%,color(var(--blueskedu) l(-5%)) 100%);
 }
 
 .site-nav-left {
